fuzzer/go/data/testdata/stacktrace/7bad_release.err
Decoding
../../src/core/SkPictureData.cpp:364: fatal error: ""nullptr == fOpData""
